Fjernet List<Map<String, Object>> fra RaceGuess